--- a/src/translations/vi.json
+++ b/src/translations/vi.json
@@ -55,5 +55,9 @@
     "save": " Lưu User",
     "upload-image": "Tải ảnh",
     "edit": "Cập nhật User"
+  },
+  "homePage": {
+    "outstanding-doctor": "Bác sĩ nổi bật tuần qua",
+    "more-infor": "Xem Thêm"
   }
 }
