--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -38,6 +38,9 @@
       "manage-specialty": "Manage specialties",
       "handbook": "Handbook",
       "manage-handbook": "Manage Handbook"
+    },
+    "doctor": {
+      "manage-schedule": "Manage Doctor 's Schedule"
     }
   },
   "manage-user": {
@@ -58,6 +61,60 @@
   },
   "homePage": {
     "outstanding-doctor": "The Famous Doctor Last Week",
-    "more-infor": "more infor"
+    "more-infor": "more infor",
+    "specialty-title": "Popular specialties"
+  },
+  "manage-schedule": {
+    "schedule-title": "Doctor's examination management",
+    "choose-doctor": "Choose Doctor",
+    "choose-date": "Choose Date",
+    "save-doctor": "Save "
+  },
+  "patient": {
+    "detail-doctor": {
+      "schedule": "schedule",
+      "no-schedule": "No appointment scheduled for today. Please choose another date ...!!!",
+      "choose": "Choose",
+      "book-free": "and book (Scheduling fee 0 VND)"
+    },
+    "extra-doctorInfo": {
+      "text-address": "Address of examination",
+      "price": "Examination price: ",
+      "xem-chi-tiet": "See details ",
+      "content-payment": " The patient can pay the cost in the form of: ",
+      "an-bang-gia": "Hide price list"
+    },
+    "booking-model": {
+      "left": "Information to book a medical appointment",
+      "name": "Full Name",
+      "phoneNumber": "Phone Number",
+      "email": "Email",
+      "address": "Address",
+      "li-do": "Reason for examination",
+      "date": "Date of Birth",
+      "gender": "Gender",
+      "save": "Save",
+      "cancel": "Cancel",
+      "priceBooking": "Free Booking",
+      "gia-kham": "Examination price :",
+      "chon-gt": "Choose gender..."
+    }
+  },
+  "admin": {
+    "manage-doctor": {
+      "title": "Create more  information  doctor",
+      "choose-doctor": "Select Doctor",
+      "doctor-infor": "Introduction ",
+      "save-doctor": "Save infor",
+      "create-doctor": "Create infor",
+      "price": "Choose Price",
+      "payment": " Payment",
+      "province": " Province",
+      "clinic": "Name Clinic",
+      "clinic-address": "Address clinic",
+      "note": "Note",
+      "chuyen-khoa": "Choose Specialty",
+      "phong-kham": "Choose Clinic"
+    }
   }
 }
