--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -40,7 +40,8 @@
       "manage-handbook": "Manage Handbook"
     },
     "doctor": {
-      "manage-schedule": "Manage Doctor 's Schedule"
+      "manage-schedule": "Manage Doctor 's Schedule",
+      "manage-patient": "Manage Doctor 's Patient"
     }
   },
   "manage-user": {
